Fixed slide in right producing overflow

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ html {
   font-size: 62.5%;
   font-family: Roboto, sans-serif;
   line-height: 1.15;
+  overflow-x: hidden;
 }
 
 body {
@@ -9,6 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 1.6rem;
+  overflow-x: hidden;
 }
 
 code {
